src/test/ui/parser/macro-keyword.stderr
error: expected identifier, found reserved keyword `macro`
  --> $DIR/macro-keyword.rs:1:4
   |
LL | fn macro() {
   |    ^^^^^ expected identifier, found reserved keyword
   |
help: escape `macro` to use it as an identifier
   |
LL | fn r#macro() {
   |    ++

error: aborting due to previous error

